--- a/src/Startup/CrestApps.OrchardCore.Samples.McpClient/Pages/Shared/_Layout.cshtml
+++ b/src/Startup/CrestApps.OrchardCore.Samples.McpClient/Pages/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
                 <a class="nav-link" asp-page="/Tools">Tools</a>
                 <a class="nav-link" asp-page="/Prompts">Prompts</a>
                 <a class="nav-link" asp-page="/Resources">Resources</a>
+                <a class="nav-link" asp-page="/ResourceTemplates">Resource Templates</a>
             </div>
         </div>
     </nav>
