--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Widget-AIChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Widget-AIChat.cshtml
@@ -5,9 +5,13 @@
 @using CrestApps.OrchardCore.SignalR.Core.Services
 @using Microsoft.AspNetCore.Authorization
 @using OrchardCore.ContentManagement
+@using OrchardCore.Entities
 @using OrchardCore.Environment.Shell
+@using OrchardCore.Environment.Shell.Scope
+@using Microsoft.Extensions.DependencyInjection
 @using CrestApps.OrchardCore.AI.Chat.Hubs
 @using CrestApps.OrchardCore.Services
+@using Microsoft.Extensions.Options
 
 @inject INamedCatalog<AIProfile> ProfileCatalog
 @inject IAuthorizationService AuthorizationService
@@ -53,8 +57,21 @@
     var historyPanelId = $"{baseId}_HistoryPanel";
     var closeHistoryBtnId = $"{baseId}_CloseHistory";
     var restoreSizeBtnId = $"{baseId}_RestoreSize";
+    var documentBarHtmlId = $"{baseId}_DocumentBar";
 
     var storagePrefix = $"{ShellSettings.Name}-{baseId}";
+
+    var shellFeaturesManager = ShellScope.Services.GetRequiredService<IShellFeaturesManager>();
+    var enabledFeatures = await shellFeaturesManager.GetEnabledFeaturesAsync();
+    var sessionDocumentsFeatureEnabled = enabledFeatures.Any(f => f.Id == AIConstants.Feature.ChatSessionDocuments);
+    var sessionDocumentsEnabled = sessionDocumentsFeatureEnabled
+        && profile.As<AIProfileSessionDocumentsMetadata>().AllowSessionDocuments;
+    var allowedExtensions = string.Empty;
+    if (sessionDocumentsEnabled)
+    {
+        var chatDocOptions = ShellScope.Services.GetRequiredService<IOptions<ChatDocumentsOptions>>();
+        allowedExtensions = string.Join(", ", chatDocOptions.Value.AllowedFileExtensions);
+    }
 }
 
 <!-- Toggle Button -->
@@ -108,6 +125,10 @@
 
     <!-- Input Area -->
     <div class="ai-admin-widget-input">
+        @if (sessionDocumentsEnabled)
+        {
+            <div id="@documentBarHtmlId" class="d-none"></div>
+        }
         <div class="ai-admin-widget-input-wrapper">
             @if (promptGeneratedProfiles.Any())
             {
@@ -181,6 +202,15 @@
             sendButtonElementSelector: '#@buttonHtmlId',
             placeholderElementSelector: '#@placeholderHtmlId',
             messages: [],
+            @if (sessionDocumentsEnabled)
+            {
+                @:sessionDocumentsEnabled: true,
+                @:documentBarSelector: '#@documentBarHtmlId',
+                @:uploadDocumentUrl: '@Url.RouteUrl(AIConstants.RouteNames.ChatSessionUploadDocument)',
+                @:removeDocumentUrl: '@Url.RouteUrl(AIConstants.RouteNames.ChatSessionRemoveDocument)',
+                @:allowedExtensions: '@allowedExtensions',
+                @:existingDocuments: [],
+            }
             messageTemplate: `
                 <div>
                     <div v-for="(message, index) in messages" :key="index" class="ai-chat-message-item">
